# romira_service_manage_bot_v2

./: .env.discord_bot_client.example  .env.example  .env.wakaba_game_service_manage_api.example  .gitignore  Cargo.toml  README.md
.github/actions/cargo_ci/: action.yaml
.github/workflows/: ci.yaml  deploy_to_discord_bot_client.yaml  deploy_to_wakaba.yaml
discord_bod_client/: Cargo.toml
discord_bod_client/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  repository.rs
discord_bod_client/src/commands/: sdtd.rs
discord_bod_client/src/repository/: sdtd.rs
discord_bot_client/: Cargo.toml
discord_bot_client/src/: commands.rs  config.rs  lib.rs  main.rs  repository.rs
discord_bot_client/src/commands/: sdtd.rs  wol.rs
discord_bot_client/src/repository/: sdtd.rs  wol.rs
schema/: Cargo.toml
schema/src/: lib.rs  sdtd.rs  wol.rs
wakaba_game_service_manage_api/: Cargo.toml
wakaba_game_service_manage_api/src/: config.rs  custom_middleware.rs  domain.rs  handler.rs  lib.rs  main.rs  systemd.rs
wakaba_game_service_manage_api/tests/: api_sdtd.rs  api_wol.rs  common.rs
