[workspace]
members = ["discord_bod_client", "schema", "wakaba_game_service_manage_api"]

[workspace.dependencies]
anyhow = { version = "1.0.90", features = ["backtrace", "std"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "std", "time"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "process"] }
envy = "0.4.2"
dotenv = "0.15.0"
