[package]
name = "wakaba_game_service_manage_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
duct = "0.13.7"
http-body-util = "0.1.2"
tokio = { workspace = true }
tower = "0.5.1"
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
envy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
easy_init_newrelic_opentelemetry = { version = "0.2.0" }
log = "0.4.22"
anyhow = { workspace = true }
listenfd = "1.0.1"
schema = { path = "../schema" }
